cmake_minimum_required(VERSION 3.10)
project(ProjetCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(ProjetCpp main.cpp Expression.cpp Expression.h Constante.cpp Constante.h Addition.cpp Addition.h Soustraction.cpp Soustraction.h Division.cpp Division.h Operateur.cpp Operateur.h Multiplication.cpp Multiplication.h Fonction.cpp Fonction.h)